@@ -1,3 +1,7 @@
+2008-02-04  Noriaki Yamazaki <micro-vnc@ias.hitachi-system.co.jp>
+	* libvncserver/zywrletemplate.c: Fix mis encode/decode when
+		width != scanline
+
 2008-02-02  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
 	* client_examples/SDLvncviewer.c: fix buttons (2 & 3 were switched),
 		fix Tab key, and fix Ctrl+<letter>
